# bcr

./: CMakeLists.txt  readme.txt
contracts/: readme.txt
contracts/bcr/: CMakeLists.txt  bcr.abi  bcr.cpp  verify_gost_sign.c
contracts/bcr/ccgost/: gost2001.c  gost_lcl.h  gost_sign.c  gosthash.c
contracts/bcr/openssl/: buffer.h  cryptlib.c  e_os.h  ec.h  err.h  mem_dbg.c
contracts/bcr/openssl/bn/: bn_ctx.c  bn_gcd.c  bn_mont.c  bn_mul.c
contracts/bcr/openssl/buffer/: buf_str.c
contracts/bcr/openssl/ec/: ec_curve.c  ec_mult.c  ecp_smpl.c
contracts/bcr/openssl/err/: err.c
contracts/bcr/openssl/stack/: stack.c
contrib/: CAMinfin.pem  CAMinfin_Signature_algorithm.txt  account_owner_and_active.keys  db.xdb  default.wallet  default_wallet.password  me_wallet.password  readme.txt  users.wallet  users_wallet.password
contrib/reverse/: data.txt  data.txt.sig  gost_test.crt  gost_test.key  pub.key  readme.txt
scripts/: cleos.sh  users.keys.sh
src/: main.cpp  verify_gost_sign.h
src/ccgost/: e_gost_err.c  gost89.c  gost_lcl.h
src/openssl/: cryptlib.c  crypto.h  mem.c  mem_dbg.c  opensslconf.h
src/openssl/bn/: bn_err.c  bn_exp2.c  bn_gf2m.c  bn_lib.c  bn_mod.c  bn_print.c  bn_rand.c  bn_word.c
src/openssl/buffer/: buf_str.c
src/openssl/dsa/: dsa_sign.c
src/openssl/ec/: ec_curve.c  ec_key.c  ec_lib.c  ecp_nistputil.c
src/openssl/err/: err.c  err_all.c  err_prn.c
src/openssl/stack/: stack.c
